Fixed style for education on small mobile view

--- a/src/app/education/education.component.css
+++ b/src/app/education/education.component.css
@@ -85,6 +85,6 @@ p{
     margin-left: auto;
     margin-right: auto;
     margin-top: 2%;
-    max-width: 45%;
+    max-width: 700px;
     }
   }
